Agregar,Modificar,Eliminar,Ver (Ready!)

--- a/La_Flor_App/FormAgregarProducto.resx
+++ b/La_Flor_App/FormAgregarProducto.resx
@@ -57,4 +57,133 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="Panel2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAAAAAAAD/2wBDAAoHCBUVFRIVFRUSEhEREhEREhESGBERERESGBgZGhgUGBgc
+        IS4lHB4rIRgYJjgmKzExNTU1GiQ7QDs1Py40NTH/2wBDAQwMDBAPEB4SEh80JCEhNDQ0MTQ0NDQ0NDQ0
+        NDYxNDQ0MTQxNDQ0NDQ0MTQ0NDQ0NDQ0MTQ0MTQ0NDQ0NDQ0NDT/wAARCACoASwDASIAAhEBAxEB/8QA
+        HAAAAQUBAQEAAAAAAAAAAAAABAACAwUGAQcI/8QAOxAAAgIBAwIEBAQEBAUFAAAAAQIAAxEEEiEFMRMi
+        QVEGMmGBQnGRoRQjUrEVYqLBgpKy0eEHJHLw8f/EABkBAAMBAQEAAAAAAAAAAAAAAAABAgMEBf/EACgR
+        AAICAgIBAwQCAwAAAAAAAAABAhESIQMxQQRRgRNxkbEzoSIyYf/aAAwDAQACEQMRAD8A9giiigApwxRG
+        RJgcMjYxzGRM8wlJIZHY0Ad+YZY4gVgHvOTklbGhyNOO0h3RjuY4zVDINa/Bmd1Pcy31TkyovkSlbEgN
+        xA7xC7TBLDGmMEdYM4hbwayUgsFcSHbCHEjMqxCAjHMeTInMQ0DXwNoVaYOVm0ehMgYThEnKThSOwRDi
+        LbH4jlWDYyLZGkQgrI3WJSJaIo0xzRhloRG0aY5o0ykIQjhGxwMGA7Ma0UUSChs7iOCzuIWB9V7pzMgZ
+        43xInylE5eNLyIvGbpEuUKJyZE0bui3zGU0x0RWCBWrDLMGCWHEwkxgxE4czrNETFFABakyq1JHtLbUy
+        n1JmlCsAtA94LYsIsgziFUMHcQWyFvBbJUWAM5kTGSvIGloRxmkLtOuZEZSQWMacVY5p1Y2ws6qTrpHA
+        zjGZ27ECOkSCSWRiyr0UjpEhsEmJkFrRx7CSB3MjJjmMYTN0QcM5FFKEKKKdxEMU6i5jq0LEAAkkgADk
+        knsAJu+ldCTSVHU6kgMBlVBy+cfInoD2y31wPcy2DZVaH4dStPH1hNdY5WkcW2H0X6Z9u49SsptW6u7u
+        ta1qx8taHaqAADH1PGSfcmS9X6s+pfe/Cjy1oPlrT0Uf9/Wcqo4kuVdgk2fRBfiNLyNW7iRs04smXQR4
+        sW+C75zxJMpMdBRec3QfxJw2TLJiofY8Ge2J7IK7wyCiUkHtInfEgZ4w2TWImRai6Vdz5ljcmZX21kTR
+        MANpE4k7LInhIYHYIHbDrTALzHEAVzI2Mc5kbGagRWSLMkcyFjKRB0xpM4WjSYUMfvnDZImjRFSHQ9mn
+        VjRHRAhrtB7DJXMhsmkUEmDsY0xzTmJqiRATu2ISQLJbHRHiLElKR1VBZlVfmdlQfmxwP7xZCZrfgnpy
+        Kf4i3sA3hg+w4Zv7j7fWU3xT15tTaTkipCVqT0A/qx7maD4gsFOnZV4yK9On0Xac/wClT+swoXJk8clJ
+        ZeCYu9hWkqzNBp9N5RK/p1OcTR1U8CY8ktnXxR0epbsGR2NzGWPI3fiYGaQ4vGF5AXkbPE4l0Fh413gy
+        vOkzNxDEc1khLzriDuY1EVErNI5GXiV5V0Q0OcSF0kpeMZxHYqAbKYJfWRLMsJBqcYl2PEob2ldc0sNd
+        xmVLvLgiWNMa6GTVLJGWbCK1xB2aH6hJXPKQHN06vMhzJ6YS0holFc54UmUSZEmVlUCimceqHBJxqpLk
+        S0VTJFr9Ka3ZGwSoQnHbzKGx+8vei9NNly8eRCHb24+Vfuf2BlT1m7fda4xtZ224/oBwn+kCaRlboi90
+        VbCNIk23PA5J4AHcn2mv6d8PU0oH1JVm77GbbUnsCQQWb74+h7xz5o8at+fHlg3RixJ1E3B+JtNUNtfY
+        fhorRE/cLmRV9V6Zedmopard21FKJVZWT6kJlWH5rmRHlcnuLS92OMjGNC+j48ejPbxqv+oY/ebDrH/p
+        xYEF2itXWUsu5QuFtK/5cHa32wfpMh0lGXU0o6sjrcgZGBVlORwQeQZpyJqL+wS6L343VglJ/AbHGf8A
+        MFXA/RjMppUyZsPjth4OnHqLr/0KVTKaU4xMvT64V9g41pGh6dWBiWgMptHZ2lynaKS2dsHo9BuBkAPp
+        D2SCvXiZxVmMQciNIkzJOBJeJoMRZOEjDxOq8WIHHWBXQu15Xah5MokyB7LJD4+JDc8FeyRiZsNfVSE6
+        vmV9lsGawy4wJsvBqZDdqJWpeZHZfLxHkN1zyrZpNfbugrS4qiGwylo9mgKWYj/4gSxWPvPEq7Je9NrR
+        vEusG6igbmXt4j/grz7EkZ/P65lC7ZJPHJzxwPsIRdgQkQijiRqcEEdwcjPI/SbW74U8bF2nevZaA4qc
+        lChbnapxgrye+MdvTMnl5IxrJ1Y0zNosJVMSfVdNtobbYjVn0J5VvqrDhvsYwmZ3fRohCdRSxAUZZiFU
+        DuSewkVry9+Gadg/iGGWyUpB7Z7M/wDcD7wSsiclFWGa9U0mmZVObCNj2D8Vzj5V+iLz9vrPPbFmm+KN
+        dvdawcrUPMfexuWP9h+szbzS7euiIrVvyT9P1qUjcENmo5Cs+3wqgfxKo5ZsepxjPb1ges1j2NudmZvQ
+        nsB7AdgPykbCRtLUVd+SqGFot04Y0zShMu+g/FOp0ZPgWFVY5athvrY+5U9j9RgzQaXXrqlqdtzWad0c
+        biGtQqQxQOeWVucAnAz6ETCCWnw/eVvrGcI7qrj0Ochc/kSJnzRbg8XRMlZqvjKkNoqr1YOp1jLkZBG6
+        tiQQe3yqMehzmYal8TefGOE0iKOPG1KuQM4OxHLNjtnLrk/WefyPTSUuJV11+C4qi70V8ua9VxMrp7MS
+        xTU8Ryibxke7FYOyQmRNOZSSMoyB3SQmEuYJaZ0Rdo0UiO54N40VuYN4bSqGmS23QKwkwxNKTCqtD9JL
+        igasom0xMhs0DHsJddV6hVpjXvVn8TdgKcdsdz9xCela+nUh9iNW6Y8pO5WB5GD6dj+hk4eQwMx/hTGS
+        J0Y+s2A0n0ifTRUxYIxGo6diVOpoM3er0szmu0vJk5NEyjRmShl30Po+nvBV72qvY4RSmUb2GeMn6ZB+
+        kS6P6SOzTYkybaqLpkLRXdc6PZpnKOODyjrnY6+6n+47iVgrY+h/Kel21/xmjAbm1MlSe/ioOf8AmX92
+        HtM50Pp4a5MjyoTYf+Abh+4A+8z4/VXB5drsTQP8Q0+Bp6NOO5JdyPV1HP8AqY/8o9plyk23xZpy1ij+
+        mpP1JZv9x+kyr14M24JNQV9vb+RAJSav4Q694X8lzitjlGPZGPdW/wApPr6H8yRnykhIwZXLCPLFxkDj
+        aPYGuyCpCsjd0YB0P5g8GVOv+HabMms+A/8ATy1LH8u6fbI+kynRfiJ6QEfNlQ4C/jQf5T7fQ/tNnode
+        lq7q3Dr6js6fRlPIniz4+f0ruL1/XyZXKPRiNZ0uxLkpdSjMc5HKlPVlPZhgH9MTTqQqZ7JSjED0VFGc
+        foJd6mtHQhsDaC1bnHkPvn0BwAf/AMmb60SmmuPuiL/zuoP+ktOnj9Y+XGKVNumKUs2kYd7SxZm5ZiWY
+        +5JyZG4iE6wnrJHQgd1kRWEssYUl2OrBikaVhJSMZIKQOJBiT6U4dG/pdW/QgxhWPrEJPRBr/jlia9L9
+        H1P9q8f2mJM2/wAar/KoPtbcP1VD/tMS05/R/wAS+f2CErSXxDIJ2dTRSZ9JSFxJ/DkgrnmqLbIigHbG
+        tVDjVEKZ1Ri0jeKK06WOTSyyFEcKpoXaA10w9pMlMICTuIwspOt9ATUqoYsjoSUdcErnuCD3BwP0gXSf
+        h9dG3iGxrN7LU2QEUVtnjGTk52nP+X0mqgHWnAqJPZXqJ/LeuZlyp4Ou/ApS0FeFI7Uklb8D3XKn/hOM
+        /cYP3kdtgjTTimCkVerTvM31BeZoddb3md1TZMwk9kyYOixzafMfSsmfgREpWT/D7hGZP6vOv/yXv+3/
+        AExuhoVbrimCmzCY9N7A7ftgj7StrvZHDDgqQR9ofomJN7oPIA9wP9O1Wbb9if3nBycdTbXUqT+5nK/A
+        B1lw9th9AQg/4QF/2MzWqq5MstRbA7Dmdy/xQ2yvZILYnMsnEHdJcZCsDAna73RgysyOvZlOCP8Ax9I9
+        lkF00W9MTL6v4na0LXdk7mVdybVXk43Mvv8Al+ktPjIFdNp8McGxksXjkoi7D+m/9fpMATN31RvG6cHP
+        LIdNcfzP8t/3fP2nPPhjx8kJJUm2vliSSZjgY8SJZMs7DUYY0x7yF2gUh+JG85vjXaCQ2xpkmmXLoPd1
+        H6kCQEwnpI3X0L721/oGB/2lP/VszZqfjRv5VH1stP8ApT/vMUZsvjhD4enORgNfkE8knw8YHr2MxqDM
+        x9H/ABL5/ZKQgsfthDaR1G4o4XjzFW25Ppntn6TmydDZVH0gBJFEEF4A8xCjtyQBn25kj6tExudFycDc
+        yjJ9hn8jOSErViiwta44pI31CqAWZVBwASQASewyYNT1ap3ZEcM6qrkDPKtnBB9exmrdIuww8ThIlRV1
+        RrGsCKu1CRvfJyckdvtmLR9TW0blVlPIdGBGx1dkZM9iQUP6g+s51z5XXgpxaVstGIkLvK/X9UrqCmx1
+        rDttUtwC3tmNbVDGcjHv6fnmaxk2JMNa6VXX7N2nvA7itmH5qN3+0zOr+NEw7VoTWtgrF1jItdhyNxQZ
+        3NgZ7ftFo/igXmytELnLgPgIuwtgBlJJHB+bkeU9u00lxyaG/Y0mg14cOwIO50buMjdVWeR6R12pmRr1
+        4o06eE63KpJusrxYylchiykDgInGO+3A78Np+J0dyuUFYQuLmYolmNwYIrck5GMDMiPHJxv7ippF1rdR
+        Kp2zHW6lWR7A38tGZWceZMqcHJ/DzuHPt9ZH4oV9m12IzllUlFPbzN2A+8j6Ur6IqTZYaOnPMNekYlDq
+        /iFakQohd2AJrO4OuTjadgbkfMfp2zkZpNR1y17FK6hjpiCxs06ZwowWVgFYqcepAIB/PIvTzk/Y2jSR
+        qNXpgATOdFbyahPQ13D9az/2nf42uwW7G3CrhuG3Hy7uFxk8e2YDotYEW1m2qArOcEsNpVipOQMHbjI9
+        Dkek4eTi5Vdrpr52Zz90VLIrDyMXcBXIAdcqxAXaGALcMDn2PHvBnRsbtrbQcbsHbn2z2gXSes6iwIqI
+        BWhXfca3u2gYZlZgfmZlHAxnjMvx05nU6gWvYAjbtO4KE0DJKIjIvhjdjJAPYHPOZ6r4PA3BPaK7T6Vn
+        +UAKMZdiERckAAseM5I478yS/pjjttIwTnIwMDJy3yj19fwmZvqPWFLK+nDIqqBYrhXyG7+cltuflxwZ
+        W/4jZuLI7V85wrMBgdh35HJ798nPeOPpdb7JUYpbNbd0lxvOayiAGyzeoVM9gwOCpJ4AI5yINrOjXj5a
+        3sUjKtWrsGGSvAxnuD6ftIfhjr61ri21hsdSpfc+ayuGReD9DzjGBzNAmq0xw4tFYfLJnDoCv+V1VgfI
+        jEElQSD2wZX0VFlYJrRRJ0igqQbympAZfCYJsFg+UF84AbjB+vvxNN0HT/8Atn01wdHeu6sqBucZYsrA
+        eoyVP1mc1fSWtfxC+ntF9jKLFDWshY+UsiNt55yzZAAHbAE51TUW6UpWqoLahXXUcOzOi7sMEViufxEt
+        yN+B2hycKnSvpp/gMF5D9T8KOADU6WME3tXkB+AMlR687hg49OSSJWp098bnVq0AyzMDkLuC8J3J3EDH
+        ufSO6frb2sOKbFsLsy7FfTME2u28FcKWUk/MfNuUZ4BEvxT1XeLdM6itslw+TsY5Lqo8ucYyPpnBwZf0
+        1dDa8klmnpq2F0svSwlN9bnw19C/C7u+cfMMc5PaRdQ6AFQvVaLipA2Ko3MDuIZdrHPCk49QpI4ImVXX
+        MTjcArZwoGFQ425Q91yBjibIaY0aetjWPEQICRtsDVgqzK4JwULBmDL2wMEZwacEgWzNGlwNxVgv9RBA
+        74/vxEmnd87FZ9uCdoJxk4Hb6zW6bq6uylKmDPW7E3I1wrsAULsQnOCBgH6dvWLrfUbRaa0DDZX5ChCZ
+        GF37i6nZjCnHGM5Jbccy40JRsx7aV9yoUcO5AVWBUtngYzNL0LoVtb12F6sbhuALPZg5G3AXyknPJx2M
+        7qtLaFqq09lNnhoTdUH3tYzclsOBlcseM55GRkRw63fpkTxanUO6t4ePJXUAARtRgUYjPzDnJ9sRTg5Q
+        aXlBjTNH17odV6aZrHZNrWIqLtzYW2eUZ9eB295iG16pvTTqi6reERkUEMVfsfEbysQVG1RjIPfI26PU
+        dXGoqGxLBsNqIWQOlpdVIBOM7PJ5hgeozjMg1WhpRjZYmnG4IbcA3b/Ljchb5Bx3AByPWZ+mi4cSjJbQ
+        1DRn+k9RZiW1JsKYOLCdvlUsWRk72Lk4x6Z9JaHSVWYes0BCOzXWaRgfUeGUb9QSDA+pat1VK6wluhcq
+        6KVJVV3Y84xlDyeTz65lXV1YLuV1LFWKqUGmVdo4HevJ/OdGOWxaWmav4h6hqbHpoSx8pW4dhvVGsx2y
+        B5uxXPuT+Zj0ektFStqan3Vut6NaWfdl97O4BJVM7Q3qdxP5HHUMuf4hA9ZRBp0rAK5HOGHJ4PbMafic
+        lWBqKnbtLMw247ebnn8pKWqRokkW3U0t1emQV3bT4m9HJLl60RslewyTvwO/lGcegfTqbanrVDYKBWoL
+        YXarg9kIbhyAxIyRzIdD8UikKXSsIThnqyAQBgeUd+ABHdQ+KUL1qAWrYK7gE4rA7YHvHVISqwk9a2tU
+        yXbDUHs1KbCPHrUFgpfJUBcH65fP0ldr/ie0MgTYHuYO9al3VDuXaVBwvmUZz7Mc4PMsNV1BE8IVVAVu
+        5scbUK+Y5Iwe3vIbbEubNiULjCqMHxQgJ/ED5e8zXHCPSK7Kf4t6g9jlCGXYxOwng+UAWY9S2D9Bj8zA
+        uldTsQjNuaUwWrLsQy5O5FXI48xB7Hky/wBRq6HtqrevxfDXAcOdu0dsgnkw3TdI0gZn8NMDcAu3IwSC
+        QVJwT9cZE0TSVUTKLbsx2krGptSsui1IrLTSDuYhedmUwdx3HzY5+p4ll1PoFNTKC61M+xfEZ/Ir4Icq
+        nJ27RnJyd3A9canSpUnieHsoLkNsRKwdvGVY4zzjv6ZMz9vQFUXBrHZLHWwBByu0kgAnnOGI4MLseNEO
+        mTU0qorrsYbnR/k2WLU1exiHGGO1VQEAHIyOSRCNf017qlsXetgfegtKkByCWVgcqMKFIyBjC8kHi70O
+        qRwXTxrNu1WQu1eSo4JBPfjuO/rmB67SixQ9xvdS5PgggIi54DKPn+pJOcxJ0U9kXS/iCpUVCjWXFClh
+        RK0rOSC7uV4Iz+uc4yZB1S7VozuKvER3V0sU+KqgZySHJAJHsAP94OpXIqEUI1YuO21FTYu0DBYADKg8
+        cfSH9ICWaY0s+SAeU9D3XvGn5Jeyr03xEio1jn+Y7oCAikIm0eVdwx9Tu9TgEcy71XxQqpk+GFesvUVV
+        WW0ZI5XHHsQCcQfp2kFaCt0IfebBY4R1ZmOW2gdvv7y30VNdjmqxE2hW2uVAAU5ztPp3PaS5LseLqjI6
+        f4zZvEFqVuWZdlaphUUeYMecHDbeP8vML6l06tiyo14quFb4VXs2bxuCsx5XnPJz379hNTR0LQbbKtiA
+        DhXOS2cfNuPOZW9QqSiiumt3A3bAztuGzJOPqPbPbMTkn4Fj7lX1PSXKtPhMFZURXSoIjMF4HzZ3DG3H
+        I7HjsYZUdRUinwFNiVsAwOAQfwNuLE+nHbgcSLqOnfcliMGdVwc8AfXiVa/EbpuRv5lhYeYdh9AIK8dD
+        0nsnfpz36awMiUOWVVrUqvkXG3ORjj/7iAaf4MI2FmR+QWU55UA5CMp2nnHf29Oc2Op6wE+VC5twTnsv
+        0+n/AJhFnX6lTaCyk91Bxj8vbvKTlWhYxsrL+k0XLsoVadUitlMgKw7EE/pzGj4W1TrixqkYMhCFgEsU
+        HOWxyRjJz7+0l6ZoKd5vQ2KFy3BPJ78y31fVS9OFTO8bS65V09OY8mugxTBX6jTpU2lkLbVrIrUJ2GCc
+        L6E84yYd07rX8SnkQK68KTtJaYDrGkcsMCxlUYBI5/aP6JoX3Bi5pHYNnB/eDiquxZbqj1O2+1ELrWli
+        ooLVn52AHJEpepV0ahVULVZwrMjeQ0I3dkYevfiGdOF6qrLcrYTa24Z3j0grdEQu1hd0c8lFICH/AMTO
+        Nrs0deAO3oWhRPEStQ9bZUG1nVnUZCHPvwZUa74ndETang2qclDg147YKn1lnYpQb08Ntvk2AZVVz3/O
+        VfWWprdbQm5mwWR+cn3Etd72Q/8AhpejdSo1IrLv4dtKFmZABW2e689/SHa/S0syl6wAq8bVUKVO38Q4
+        GCob8+Zk+mdfpZiprVK2xwAO8t9WCwYb81k8AZyFiaoadmd6rSama3TXu43ecYBZD6Zb/eHaf4mddodH
+        dTWA24btz475PBhWn1tNCMoXGeM98/nKs9VQFsJuySwAHAPrj2lXaJa2H9O+IH3hWXFY4GQBt/L6Sx1N
+        dWobDIDwMN2HHpn7TC63W2MxZVKj2Eu+hfEJQBXUkepicX2NNGh0+kcBhhQNjVoqDjHpk/pMyPh9Bw4p
+        Vx8wvs2Pn3C4OF9uZcjqR37qyWT1Q9vt7SV+p6diS/zE85HP9oLQ3vsbqKrUDbG38583J+30jE0LOAz7
+        QSRn7Sw1moVO0Bp6gGOCYsh4gNnw+CzMWJ5yoHb8pYUaYqnnRSy55wM49JZacqcHvCXdcekLsEkis0YI
+        Rm27s9w0ZrNAHVGSsBh3PY4PcQ1dUvbiGUapAMcSbodWYjqvT3qAdF2nscHvAdN1O0A7mbA7DkTeailX
+        74Ilff0hPYS1L3JaZldP1p9+SSR29e0squsMXGMlT3B7Qv8Awev2EhfSojDAjyQqZpP4cvXlfKeG8vGT
+        9oNTS5Vw5ZiTuUn8JhfTNWNoBht1q4zM6tl3RnR064NuD8c8HnMJ6D0dg5GSGLZJHYg+ks6LlPeWOm1C
+        Ic8RtuhGgr6UipyBnHrMR1t1R8DgHI+8vdT8QDGMzP6/UpYecSLt6Gk0tlBr9Q6AebKZ5HvAh1nflWHl
+        /CfUTRvQjjacSG3pFajgDOJpa8ktDadUpTC+ZsfcyrTQlLBaE+x7SJgUcY7ZmgL70AHfiLop7ItbULEK
+        7PORwQO33mXTor7v5mVUHv7zfaKvYuTGWXITggQUqE42U+j6OABh2C44AhTaNgwIPkxggQ+1128Y47QP
+        T6znB/WTsejloReDjJ9O8zPUulu7eT5c9hwJo9a6dziUd/XFQkCVG/BMqD+ndNtAXzkY7jvmH6zS2OBz
+        x65lLpviaXWj6pvxG4saaK3RaU1uwblG7gwTq3R/EfykBfwj2ln1uwgbh3md0vUWZ/MeBGr7JddBvS/h
+        sK2WGR7eks9ToX7IQFAxiFUa9AncZxKHU/EBRyB2zITcmXSiib/CHfIf9o6vpS1+mZzT9fVjzDjeH5Bg
+        8kCxIq+nK4OVEnp6LUBwBmc/i9oxO6C0ls54iTYUidNGiegGeDDU01WOVUn3wID1SwY4Mrq72x80YHQ2
+        8QK/REHIiilLsTLvpmQvME6rqCucRRRAUv8AHt7xo6m3uYoppiiLYdpes49YTZ1Et2iikuKKjJk1FhIk
+        LpubmKKSUHaby4hz3DbOxRLsH0UGp6oEY4MQ6xkd4opqQCX9QPJzKp+rMG7xRQjFClJlpoOpEkcy1s13
+        AiikySsqL0MbawzHaTVAMBFFIKXZd26obZUW6lRzmKKSihafWhuMwwIuMxRSyTNdc1BGcGZR0Zz6xRTS
+        PRlLss9Bpe2ZqulBRiKKJjRa6ylXXEx3UNAUJIiiiQM5oQ7ccye3oxbmKKHkYEejODxmXHTaWTAMUUH0
+        OPZb2aHdzInr2DiKKZFlLrLHY9zBvFccRRTVEM//2Q==
+</value>
+  </data>
 </root>
